--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 #ignoring datasets
 A/input
-A/output*
+A/output/
 A/target
 A/.idea
 B/.bsp/
@@ -16,6 +16,5 @@ C/output/
 C/project/
 C/target/
 D/input
-D/output*
 D/target
 D/.idea
